force-app/main/default/objects/TechActionPlan__c/TechActionPlan__c.object-meta.xml
<CustomObject>
    <label>対応施策</label>
    <nameField>
        <label>施策要約</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>対応施策</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>