force-app/main/default/objects/TechActionPlan__c/fields/content__c.field-meta.xml
<CustomField>
    <fullName>content__c</fullName>
    <label>施策内容</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>