force-app/main/default/objects/TechActionPlan__c/fields/countIssue__c.field-meta.xml
<CustomField>
    <fullName>countIssue__c</fullName>
    <description>関連する課題数を取ることで影響を数値化しています</description>
    <label>関連課題数</label>
    <summaryForeignKey>Relation_Issue2Plan__c.TechActionPlan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>