force-app/main/default/objects/TechActionPlan__c/fields/countRequirement__c.field-meta.xml
<CustomField>
    <fullName>countRequirement__c</fullName>
    <description>機能数をカウントする事で概算工数の目安になります</description>
    <label>機能要件数</label>
    <summaryForeignKey>Relation_Plan2Requirements__c.TechActionPlan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>