force-app/main/default/objects/TechActionPlan__c/fields/planNum__c.field-meta.xml
<CustomField>
    <fullName>planNum__c</fullName>
    <displayFormat>Plan-{00000}</displayFormat>
    <label>施策番号</label>
    <type>AutoNumber</type>
</CustomField>