force-app/main/default/objects/TechActionPlan__c/fields/planType__c.field-meta.xml
<CustomField>
    <fullName>planType__c</fullName>
    <label>対応種別</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>システム対応</fullName>
            </value>
            <value>
                <fullName>運用対応</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>