force-app/main/default/objects/TechActionPlan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>status__c</columns>
    <columns>content__c</columns>
    <columns>planType__c</columns>
    <columns>countIssue__c</columns>
    <columns>countRequirement__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>